Fixed hamburger menu

--- a/booking-room.html
+++ b/booking-room.html
@@ -22,11 +22,10 @@
             </ul>
         </nav>
 
-              <a href="booking-room.html" class="btn">BOKA RUM</a>
     </header>
 
     <!-- WRAPPER - BOOKING ROOM PAGE-->
-    <main class="wrapper wrapper--flex-row">
+    <main class="wrapper wrapper--gap">
 
         <!-- SEARCHED BOOKING -->
         <aside class="booking">
