--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <!-- HEADER -->
+    <!-- HEADER
     <header class="header">
         <figure class="logo">
             <a href="index.html" class="header__favicon">
@@ -36,7 +36,48 @@
             </ul>
         </nav>
         <a href="booking-room.html" class="btn">BOKA RUM</a>
-    </header>
+    </header> -->
+
+    <header class="header">
+        <figure class="logo">
+          <a href="index.html" class="header__favicon">
+            <img
+              src="assets/logo/bonz.ai-logo-white-portrait.png"
+              alt="logo"
+              class="logo__favicon"
+            />
+          </a>
+        </figure>
+  
+        <input
+          type="checkbox"
+          class="header__hamburger-menu"
+          id="hamburger-menu"
+        />
+        <label class="header__hamburger-btn" for="hamburger-menu">
+          <span></span>
+        </label>
+  
+        <nav class="header__navigation">
+          <ul class="header__nav-list">
+            <li class="header__nav-titles">
+              <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a>
+            </li>
+            <li class="header__nav-titles">
+              <a href="ai.html" class="header__links">AI</a>
+            </li>
+            <li class="header__nav-titles">
+              <a href="eat-and-drink.html" class="header__links">ÄT & DRICK</a>
+            </li>
+            <li class="header__nav-titles">
+              <a href="rooms.html" class="header__links">VÅRA RUM</a>
+            </li>
+            <li class="header__nav-titles header__nav-titles--border-bottom">
+              <a href="booking-room.html" class="btn">BOKA RUM</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
     <!-- HERO -->
     <section class="hero">
