Worked on footer

--- a/index.html
+++ b/index.html
@@ -37,31 +37,37 @@
         </nav>
         <a href="booking-room.html" class="btn">BOKA RUM</a>
     </header> -->
-
+    
+    <!-- HEADER -->
     <header class="header">
-        <figure class="logo">
+        <figure class="logo" aria-label="Bonz.ai logo">
           <a href="index.html" class="header__favicon">
             <img
-              src="assets/logo/bonz.ai-logo-white-portrait.png"
-              alt="logo"
-              class="logo__favicon"
+                src="assets/logo/bonz.ai-logo-white-portrait.png"
+                alt="logo"
+                class="logo__favicon"
             />
           </a>
         </figure>
   
         <input
-          type="checkbox"
-          class="header__hamburger-menu"
-          id="hamburger-menu"
+            type="checkbox"
+            class="header__hamburger-menu"
+            id="hamburger-menu"
+            aria-label="Öppna huvudmeny"
+            tabindex="-1"
         />
-        <label class="header__hamburger-btn" for="hamburger-menu">
+        <label class="header__hamburger-btn" for="hamburger-menu" tabindex="0">
           <span></span>
         </label>
   
         <nav class="header__navigation">
           <ul class="header__nav-list">
             <li class="header__nav-titles">
-              <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a>
+                <a 
+                    href="about-bonzai.html" class="header__links">
+                    OM BONZ.AI
+                </a>
             </li>
             <li class="header__nav-titles">
               <a href="ai.html" class="header__links">AI</a>
@@ -105,7 +111,7 @@
                 <h2 class="booking__head-title">Boka ett rum</h2>
                 <h3 class="booking__sub-title">Upptäck din unika hotellupplevelse</h3>
             </section>
-            <section class="booking__input-field">
+            <section class="booking__input-field grid-wrapping">
                 <label class="booking__input">
                     <h3 class="booking__input-title">Startdatum</h3>   
                     <input type="date" class="booking__input-box">
@@ -162,13 +168,14 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <figure class="footer__logo">
+    <footer class="footer grid-wrapping">
+        <figure class="footer__logo grid-wrapping__span-two grid-wrapping__span-full" aria-label="Bonz.ai logo">
             <a href="index.html" class="header__favicon">
                 <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
             </a>
         </figure>
-        <section class="footer__text">
+
+        <section class="footer__text grid-wrapping__span-two grid-wrapping__span-full">
             <h2 class="footer__title">Bonz.AI hotel</h2>
             <p class="footer__contact-text">
                 By 80<br>
@@ -184,7 +191,42 @@
             </section>
         </section>
 
-        <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64055.63902158073!2d12.988436222076409!3d59.88668696960804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464320da325046bd%3A0xb8b6d14d9b43dcd6!2sHotell%20Frykenstrand%2C%20Sure%20Hotel%20Collection%20by%20Best%20Western!5e0!3m2!1ssv!2sse!4v1732962781687!5m2!1ssv!2sse" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="footer__media-links grid-wrapping__span-two grid-wrapping__span-full">
+            <h2 class="footer__title">Medialänkar</h2>
+            <figure class="footer_link-box">
+                <a 
+                    href="" 
+                    class="footer__links" 
+                    aria-label="Link to Bonz.ai facebook">
+                        <img
+                            class="footer__link-image" 
+                            src="assets/icons/facebook.png" alt="Facebook link icon">
+                </a>
+                <a 
+                    href=""
+                    class="footer__links" 
+                    aria-label="Link to Bonz.ai instagram">
+                    <img 
+                        class="footer__link-image"
+                        src="assets/icons/instagram.png" alt="Instagram link icon">
+                </a>
+                <a 
+                    href="" 
+                    class="footer__links" 
+                    aria-label="Link to green key">
+                    <img
+                        class="footer__link-image" 
+                        src="assets/icons/Green-Key-Logo.png" alt="Green Key link icon">
+                </a>
+            </figure>
+        </section>
+
+        <iframe 
+            class="footer__map grid-wrapping__span-two grid-wrapping__span-full"
+            aria-label="Map direction to hotell with Google maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64055.63902158073!2d12.988436222076409!3d59.88668696960804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464320da325046bd%3A0xb8b6d14d9b43dcd6!2sHotell%20Frykenstrand%2C%20Sure%20Hotel%20Collection%20by%20Best%20Western!5e0!3m2!1ssv!2sse!4v1732962781687!5m2!1ssv!2sse"  
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </footer>
 </body>
 </html>
