--- a/booking-room.html
+++ b/booking-room.html
@@ -7,33 +7,37 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <!-- HEADER -->
-    <header class="header header--grid">
+    <!-- HEADER  - BOOKING PAGE  -->
+    <header class="header">
         <figure class="logo">
             <a href="index.html" class="header__favicon">
-                <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
+                <img 
+                    src="assets/logo/bonz.ai-logo-white-portrait.png" 
+                    alt="logo" 
+                    class="logo__favicon"
+                />
             </a>
         </figure>
 
         <nav class="header__navigation">
             <ul class="header__nav-list">
-                <li class="header__nav-titles header__links--active">
-                    RUMSBOKNING</li>
+                <li class="header__nav-titles">
+                    <a href="booking-room.html" class="header__links header__links--active">RUMSBOKNING</a>
+                </li>
             </ul>
         </nav>
-
     </header>
 
     <!-- WRAPPER - BOOKING ROOM PAGE-->
     <main class="wrapper wrapper--gap">
 
-        <!-- SEARCHED BOOKING -->
-        <aside class="booking">
+        <!-- SEARCHED BOOKING - BOOKING PAGE -->
+        <aside>
             <form class="booking booking--wider booking__input-field--padding">
                 <section class="booking__titles">
                     <h2 class="booking__head-title">Din sökning</h2>
                 </section>
-                <section class="booking__input-field booking__input-field--wide">
+                <section class="booking__input-field booking__input-field--wide grid-wrapping">
                     <label class="booking__input booking__input--width">
                         <h3 class="booking__input-title">Startdatum</h3>   
                         <input type="date" class="booking__input-box" value="2024-12-01">
@@ -55,7 +59,7 @@
             </form>
         </aside>
 
-        <!-- ROOM BOOKING INFO -->
+        <!-- ROOM BOOKING INFO - BOOKING PAGE -->
         <section class="overview-room">
             <h1>Välj rum</h1>
             <section class="room">
@@ -69,9 +73,19 @@
                         </figure>
                     </figure>
                     <section class="room__info">
-                        <section class="room__titles">
-                            <h2 class="room__head-title">Standard</h2>
-                            <h3 class="room__sub-title">Dubbelsäng</h3>
+                        <section class="room__header">
+                            <section class="room__titles">
+                                <h2 class="room__head-title">Standard</h2>
+                                <h3 class="room__sub-title">Dubbelsäng</h3>
+                            </section>
+                            <section class="room__review">
+                                <figure class="room__icon">
+                                    <img src="assets/icons/thumbs-up-solid.svg" alt="Thumps up icon">
+                                </figure>
+                                <h3 class="room__sub-title">
+                                    Prisvärd
+                                </h3>
+                            </section>
                         </section>
 
                         <p class="room__description">Vårt Standardrum med dubbelsäng kombinerar modern teknologi med en bekväm och lyxig miljö. Med en <strong>egen AI-assistent</strong> som alltid är redo att hjälpa dig oavsett om det handlar om att anpassa rumsbelysningen, boka aktiviteter eller svara på frågor.
@@ -156,13 +170,14 @@
     </main>
 
     <!-- FOOTER - BOOKING ROOM PAGE -->
-    <footer class="footer">
-        <figure class="logo logo--larger logo--center">
+    <footer class="footer grid-wrapping">
+        <figure class="footer__logo grid-wrapping__span-two grid-wrapping__span-full" aria-label="Bonz.ai logo">
             <a href="index.html" class="header__favicon">
                 <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
             </a>
         </figure>
-        <section class="footer__text">
+
+        <section class="footer__text grid-wrapping__span-two grid-wrapping__span-full">
             <h2 class="footer__title">Bonz.AI hotel</h2>
             <p class="footer__contact-text">
                 By 80<br>
@@ -178,7 +193,42 @@
             </section>
         </section>
 
-        <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64055.63902158073!2d12.988436222076409!3d59.88668696960804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464320da325046bd%3A0xb8b6d14d9b43dcd6!2sHotell%20Frykenstrand%2C%20Sure%20Hotel%20Collection%20by%20Best%20Western!5e0!3m2!1ssv!2sse!4v1732962781687!5m2!1ssv!2sse" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="footer__media-links grid-wrapping__span-two grid-wrapping__span-full">
+            <h2 class="footer__title">Medialänkar</h2>
+            <figure class="footer_link-box">
+                <a 
+                    href="" 
+                    class="footer__links" 
+                    aria-label="Link to Bonz.ai facebook">
+                        <img
+                            class="footer__link-image" 
+                            src="assets/icons/facebook.png" alt="Facebook link icon">
+                </a>
+                <a 
+                    href=""
+                    class="footer__links" 
+                    aria-label="Link to Bonz.ai instagram">
+                    <img 
+                        class="footer__link-image"
+                        src="assets/icons/instagram.png" alt="Instagram link icon">
+                </a>
+                <a 
+                    href="" 
+                    class="footer__links" 
+                    aria-label="Link to green key">
+                    <img
+                        class="footer__link-image" 
+                        src="assets/icons/Green-Key-Logo.png" alt="Green Key link icon">
+                </a>
+            </figure>
+        </section>
+
+        <iframe 
+            class="footer__map grid-wrapping__span-two grid-wrapping__span-full"
+            aria-label="Map direction to hotell with Google maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64055.63902158073!2d12.988436222076409!3d59.88668696960804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464320da325046bd%3A0xb8b6d14d9b43dcd6!2sHotell%20Frykenstrand%2C%20Sure%20Hotel%20Collection%20by%20Best%20Western!5e0!3m2!1ssv!2sse!4v1732962781687!5m2!1ssv!2sse"  
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </footer>
 </body>
 </html>
