Worked on the hamburger menu

--- a/booking-room.html
+++ b/booking-room.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- HEADER  - BOOKING PAGE  -->
-    <header class="header">
-        <figure class="logo">
+    <header class="header header--grid">
+        <figure class="logo logo--align">
             <a href="index.html" class="header__favicon">
                 <img 
                     src="assets/logo/bonz.ai-logo-white-portrait.png" 
@@ -19,13 +19,15 @@
             </a>
         </figure>
 
-        <nav class="header__navigation">
-            <ul class="header__nav-list">
-                <li class="header__nav-titles">
-                    <a href="booking-room.html" class="header__links header__links--active">RUMSBOKNING</a>
+        <nav class="header__navigation--center">
+            <h1 class="header__links header__links--active">RUMSBOKNING</h1>
+            <!-- <ul class="header__nav-list">
+                <li class="header__nav-titles header__links header__links--active">
+                    RUMSBOKNING
                 </li>
-            </ul>
+            </ul> -->
         </nav>
+        <!-- <a href="booking-room.html" class="btn">TILL HEM</a> -->
     </header>
 
     <!-- WRAPPER - BOOKING ROOM PAGE-->
