--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
             aria-label="Öppna huvudmeny"
             tabindex="-1"
         />
-        <label class="header__hamburger-btn" for="hamburger-menu" tabindex="0">
+        <label 
+            class="header__hamburger-btn" for="hamburger-menu" 
+            tabindex="0"
+            aria-label="Huvudmeny öppen">
           <span></span>
         </label>
   
@@ -78,7 +81,7 @@
             <li class="header__nav-titles">
               <a href="rooms.html" class="header__links">VÅRA RUM</a>
             </li>
-            <li class="header__nav-titles header__nav-titles--border-bottom">
+            <li class="header__nav-titles header__nav-titles--more-margin">
               <a href="booking-room.html" class="btn">BOKA RUM</a>
             </li>
           </ul>
