Added image slider in "Din AI" page

--- a/booking-room.html
+++ b/booking-room.html
@@ -20,14 +20,8 @@
         </figure>
 
         <nav class="header__navigation--center">
-            <h1 class="header__links header__links--active">RUMSBOKNING</h1>
-            <!-- <ul class="header__nav-list">
-                <li class="header__nav-titles header__links header__links--active">
-                    RUMSBOKNING
-                </li>
-            </ul> -->
+            <h1 class="header__links header__links--no-hover header__links--active">RUMSBOKNING</h1>
         </nav>
-        <!-- <a href="booking-room.html" class="btn">TILL HEM</a> -->
     </header>
 
     <!-- WRAPPER - BOOKING ROOM PAGE-->
