--- a/index.html
+++ b/index.html
@@ -6,38 +6,7 @@
     <title>Bonz.ai - Ditt hållbara futuristiska hotell</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
-<body>
-    <!-- HEADER
-    <header class="header">
-        <figure class="logo">
-            <a href="index.html" class="header__favicon">
-                <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
-            </a>
-        </figure>
-        
-        <input type="checkbox" class="header__hamburger-menu" id="hamburger-menu">
-        <label class="header__hamburger-btn" for="hamburger-menu">
-            <span></span>
-        </label>
-
-        <nav class="header__navigation">
-            <ul class="header__nav-list">
-                <li class="header__nav-titles">
-                    <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a></li>
-                <li class="header__nav-titles">
-                    <a href="ai.html" class="header__links">AI</a>
-                </li>
-                <li class="header__nav-titles">
-                    <a href="eat-and-drink.html" class="header__links">ÄT & DRICK</a>
-                </li>
-                <li class="header__nav-titles header__nav-titles--border-bottom">
-                    <a href="rooms.html" class="header__links">VÅRA RUM</a>
-                </li>
-            </ul>
-        </nav>
-        <a href="booking-room.html" class="btn">BOKA RUM</a>
-    </header> -->
-    
+<body>  
     <!-- HEADER -->
     <header class="header">
         <figure class="logo" aria-label="Bonz.ai logo">
@@ -73,7 +42,7 @@
                 </a>
             </li>
             <li class="header__nav-titles">
-              <a href="ai.html" class="header__links">AI</a>
+              <a href="ai.html" class="header__links">DIN AI</a>
             </li>
             <li class="header__nav-titles">
               <a href="eat-and-drink.html" class="header__links">ÄT & DRICK</a>
@@ -95,13 +64,13 @@
         </figure>
         <article class="hero__description">
             <section>
-                <h1>BONZ.AI</h1>
-                <p>DIN HÅLLBARA<br>
+                <h1 class="hero__title">BONZ.AI</h1>
+                <p class="hero__text">DIN HÅLLBARA<br>
                     FUTURISTISKA<br>
                     HOTELLUPPLEVELSE
                 </p>
             </section>
-            <a href="about-bonzai.html" class="btn btn--small">
+            <a href="about-bonzai.html" class="btn btn--small btn--center">
             LÄS MER
             </a>
         </article>
