--- a/booking-room.html
+++ b/booking-room.html
@@ -6,6 +6,7 @@
     <title>Bonz.ai - Ditt hållbara futuristiska hotell</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
+<!-- WAVE/LIGHTHOUSE GIVES ERROR FOR STARS COLOR BUT IT DOESNT SHOW ANY CONTRAS INFORMATION IN INSPECTOR AND THERE IS A SIGNIFICANT CONTRAST BETWEEN THE COLORS IN COLORBLINDLY -->
 <body>
     <!-- HEADER  - BOOKING PAGE  -->
     <header class="header header--grid">
@@ -24,11 +25,11 @@
         </nav>
     </header>
 
-    <!-- WRAPPER - BOOKING ROOM PAGE-->
+    <!-- MAIN - BOOKING ROOM PAGE-->
     <main class="wrapper wrapper--gap">
 
         <!-- SEARCHED BOOKING - BOOKING PAGE -->
-        <aside>
+        <section>
             <form class="booking booking--wider booking__input-field--padding">
                 <section class="booking__titles">
                     <h2 class="booking__head-title">Din sökning</h2>
@@ -48,12 +49,12 @@
                     </label>
                     <label class="booking__input booking__input--width">
                         <h3 class="booking__input-title">Barn (0-15 år)</h3>   
-                        <input type="number" class="booking__input-box" min="0" value="1">
+                        <input type="number" class="booking__input-box" min="0" value="0">
                     </label>
                 </section>
                 <button class="btn">Ny sökning</button>
             </form>
-        </aside>
+        </section>
 
         <!-- ROOM BOOKING INFO - BOOKING PAGE -->
         <section class="overview-room">
@@ -75,15 +76,16 @@
                                 <h3 class="room__sub-title">Dubbelsäng</h3>
                             </section>
                             <section class="room__review">
-                                <figure class="room__icon">
-                                    <img src="assets/icons/thumbs-up-solid.svg" alt="Thumps up icon">
-                                </figure>
                                 <h3 class="room__sub-title">
                                     Prisvärd
                                 </h3>
+                                <section class="room__star">
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                </section>
                             </section>
                         </section>
-
                         <p class="room__description">Vårt Standardrum med dubbelsäng kombinerar modern teknologi med en bekväm och lyxig miljö. Med en <strong>egen AI-assistent</strong> som alltid är redo att hjälpa dig oavsett om det handlar om att anpassa rumsbelysningen, boka aktiviteter eller svara på frågor.
                         </p>
                         <h4>Bekvämligheter</h4>
@@ -95,7 +97,6 @@
                                 <li class="room__list-item">Egen AI-assistent</li>
                                 <li class="room__list-item">Gratis WiFi</li>
                             </ul>
-
                             <ul class="room__list-bo">
                                 <li class="room__list-item">Eget kök</li>
                                 <li class="room__list-item">Vy mot solnedgång</li>
@@ -114,25 +115,39 @@
                         </section>
                     </section>
                 </section>
-            </section>     
+            </section> 
+
             <section class="room">
                 <section class="room__card">
                     <figure class="room__gallery">
-                        <img class="room__image room__image--large" src="assets/photos/02-day.jpg" alt="Standard room image view">
+                        <img class="room__image room__image--large" src="assets/photos/02-night.jpg" alt="Standard room image view">
                         <figure class="room__image-small">
-                            <img class="room__image-small-box" src="assets/photos/01-day.jpg" alt="Standard room image desk">
-                            <img class="room__image-small-box" src="assets/photos/03-day.jpg" alt="Standard room image view from bed">
-                            <img class="room__image-small-box" src="assets/photos/04-day.jpg" alt="Standard room image bed">
+                            <img class="room__image-small-box" src="assets/photos/01-night.jpg" alt="Standard room image desk">
+                            <img class="room__image-small-box" src="assets/photos/03-night.jpg" alt="Standard room image view from bed">
+                            <img class="room__image-small-box" src="assets/photos/04-night.jpg" alt="Standard room image bed">
                         </figure>
                     </figure>
                     <section class="room__info">
-                        <section class="room__titles">
-                            <h2 class="room__head-title">Premium</h2>
-                            <h3 class="room__sub-title">Dubbelsäng</h3>
+                        <section class="room__header">
+                            <section class="room__titles">
+                                <h2 class="room__head-title">Premium</h2>
+                                <h3 class="room__sub-title">Dubbelsäng</h3>
+                            </section>
+                            <section class="room__review">
+                                <h3 class="room__sub-title">
+                                    Favorit
+                                </h3>
+                                <section class="room__star">
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                </section>
+                            </section>
                         </section>
-
                         <p class="room__description">Vårt Premiumrum erbjuder en lyxig och modern vistelse med <strong>två AI-assistenter</strong> som sätter en ny standard för bekvämlighet och service. Koppla av i stil och njut av exklusiva detaljer som gör din vistelse oförglömlig.
                         </p>
+
                         <h4>Bekvämligheter</h4>
                         <section class="room__list">
                             <ul class="room__list-box">
@@ -154,14 +169,76 @@
                         <hr>
                         <section class="room__btn">
                             <section class="price">
-                                <h2>Totalt 940 kr</h2>
+                                <h2>Totalt 1 350 kr</h2>
                                 <h3>Inkl. skatter och avgifter</h3>
                             </section>
                             <button class="room__book-btn btn">BOKA NU</button>
                         </section>
                     </section>
                 </section>
-            </section>   
+            </section>    
+
+            <section class="room">
+                <section class="room__card">
+                    <figure class="room__gallery">
+                        <img class="room__image room__image--large" src="assets/photos/05-day.jpg" alt="Standard room image view">
+                        <figure class="room__image-small">
+                            <img class="room__image-small-box" src="assets/photos/06-day.jpg" alt="Standard room image desk">
+                            <img class="room__image-small-box" src="assets/photos/07-day.jpg" alt="Standard room image view from bed">
+                            <img class="room__image-small-box" src="assets/photos/08-day.jpg" alt="Standard room image bed">
+                        </figure>
+                    </figure>
+                    <section class="room__info">
+                        <section class="room__header">
+                            <section class="room__titles">
+                                <h2 class="room__head-title">Supreme</h2>
+                                <h3 class="room__sub-title">Dubbelsäng</h3>
+                            </section>
+                            <section class="room__review">
+                                <h3 class="room__sub-title">
+                                    Toppval
+                                </h3>
+                                <section class="room__star">
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                    <p>★</p>
+                                </section>
+                            </section>
+                        </section>
+                        <p class="room__description">Supremerummet erbjuder en lyxig och innovativ upplevelse som överträffar alla förväntningar. Här möts toppmodern teknologi och sofistikerad design i perfekt harmoni. Rummet är utrustat med <strong>tre avancerade AI-assistenter</strong> som står redo att ta din vistelse till nästa nivå.
+                        </p>
+
+                        <h4>Bekvämligheter</h4>
+                        <section class="room__list">
+                            <ul class="room__list-box">
+                                <li class="room__list-item">3 AI-assistenter</li>
+                                <li class="room__list-item">Supremelakan</li>
+                                <li class="room__list-item">Minibar</li>
+                                <li class="room__list-item">Egen AI-assistent</li>
+                                <li class="room__list-item">Gratis WiFi</li>
+                            </ul>
+
+                            <ul class="room__list-bo">
+                                <li class="room__list-item">Eget kök</li>
+                                <li class="room__list-item">Vy mot solnedgång</li>
+                                <li class="room__list-item">Egen balkong</li>
+                                <li class="room__list-item">Dygnet runt service</li>
+                                <li class="room__list-item">Dubbelsäng</li>
+                            </ul>
+                        </section>
+                        <hr>
+                        <section class="room__btn">
+                            <section class="price">
+                                <h2>Totalt 1 950 kr</h2>
+                                <h3>Inkl. skatter och avgifter</h3>
+                            </section>
+                            <button class="room__book-btn btn">BOKA NU</button>
+                        </section>
+                    </section>
+                </section>
+            </section>    
         </section>
     </main>
 
